--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,15 @@ dependencies:
   flutter:
     sdk: flutter
 
-
+  audioplayers: ^5.2.1
+  firebase_auth: ^4.15.3
+  cloud_firestore: ^4.13.6
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   intl:
+  firebase_core: ^2.23.0
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_test:
